--- a/index.html
+++ b/index.html
@@ -4,7 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu header__links-list-item_no-bullit">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__link">
+            <a>главная</a>
+          </li>
+          <li class="header__links-list-item header__link_active" href="#0">
+            <a>посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item header__link_active" href="#0">
+            <a>об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта"
+        />
+      </a>
+      <address class="address header__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a><br />
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
+        наб. Принсенграхт 263-265, Амстердам
+      </address>
+    </header>
+    <main class="content">
+      <section class="cover">
+        <div class="overlay">
+          <h1 class="cover__title">
+            <span class="accent-span">Оно</span>
+            <!-- Заебашить еше span-ов -->
+            <span class="accent-span text-center">тебе</span>
+            <span class="accent-span text-right">надо</span>
+          </h1>
+          <div class="cover__description">
+            <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+            <button class="bet-button">Сделать ставку</button>
+          </div>
+        </div>
+      </section>
+      <section class="lots"></section>
+      <section class="about"></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
