--- a/index.html
+++ b/index.html
@@ -41,20 +41,155 @@
       <section class="cover">
         <div class="overlay">
           <h1 class="cover__title">
-            <span class="accent-span">Оно</span>
-            <!-- Заебашить еше span-ов -->
-            <span class="accent-span text-center">тебе</span>
-            <span class="accent-span text-right">надо</span>
+            <span class="accent-span letter-spacing"
+              >Он
+              <span class="spacing-last-letter">о</span>
+            </span>
+            <span class="accent-span text-center letter-spacing"
+              >теб
+              <span class="spacing-last-letter">е</span>
+            </span>
+            <span class="accent-span text-right letter-spacing"
+              >н
+              <span class="spacing-last-letter">адо</span>
+            </span>
           </h1>
           <div class="cover__description">
-            <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+            <p class="cover__description-text">
+              Аукцион вещей, в которые никто не верил
+            </p>
             <button class="bet-button">Сделать ставку</button>
           </div>
         </div>
       </section>
-      <section class="lots"></section>
-      <section class="about"></section>
+      <section class="lots">
+        <h1 class="lots__heading">лоты</h1>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#">
+              <article class="card card_type_film">
+                <div class="overlay">
+                  <h2 class="card__title">
+                    Фильм режиссёра, который бросил киношколу
+                  </h2>
+                  <p class="card__text">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                    ставка, если бы вы не знали, что режиссёр — Пол Томас
+                    Андерсон?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#">
+              <article class="card card_type_book">
+                <div class="overlay">
+                  <h2 class="card__title">
+                    Книга, где описан один скучный день из жизни рекламного
+                    агента
+                  </h2>
+                  <p class="card__text">
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                    и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы,
+                    начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                    Джеймса Джойса?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#">
+              <article class="card card_type_picture">
+                <div class="overlay">
+                  <h2 class="card__title">
+                    Картина, которую повторит даже 5-летний сын маминой подруги
+                  </h2>
+                  <p class="card__text">
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                    котиков… Сколько бы вы на такое поставили, если бы не знали,
+                    что это — одна из революционных работ Кандинского?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about__column about__column_logo">
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              src="./images/logo-white.svg"
+              alt="Логотип"
+            />
+          </div>
+          <div class="about__column about__column_text">
+            <h1 class="about__title">Об аукционе</h1>
+            <div class="about__text">
+              <p>
+                Здесь вы не встретите очередное пафосное собрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были попасть
+                ни на один аукцион. Потому что кому нужен дневник
+                девочки-подростка или картина, которую может нарисовать даже
+                ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+              </p>
+              <p>
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё
+                время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                на критику, кажущуюся простоту или сложность, сейчас без этих
+                лотов невозможно представить современную культуру. Когда в эти
+                вещи не верил никто, продолжали верить их создатели. И сейчас
+                эти лоты стали культовыми.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <address class="address footer__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a><br />
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
+        наб. Принсенграхт 263-265, Амстердам
+      </address>
+      <nav class="footer__menu footer__links-list-item_no-bullit">
+        <ul class="footer__links-list">
+          <li class="footer__links-list-item footer__link">
+            <a>главная</a>
+          </li>
+          <li class="footer__links-list-item footer__link_active" href="#0">
+            <a>посмотреть лоты</a>
+          </li>
+          <li class="footer__links-list-item footer__link_active" href="#0">
+            <a>об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="socials">
+        <img
+          class="footer__logo-image"
+          src="./images/yt.svg"
+          alt="YouTube"
+        />
+        <img
+          class="footer__logo-image"
+          src="./images/vk.svg"
+          alt="Вконтакте"
+        />
+        <img
+          class="footer__logo-image"
+          src="./images/pinterest.svg"
+          alt="Pinterest"
+        />
+      </div>
+    </footer>
   </body>
 </html>
