--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
-        наб. Принсенграхт 263-265, Амстердам
+        наб. Принсенграхт 263-265,<br />
+        Амстердам
       </address>
     </header>
     <main class="content">
@@ -158,7 +159,7 @@
       <address class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
-        наб. Принсенграхт 263-265, Амстердам
+        наб. Принсенграхт 263-265,<br>Амстердам
       </address>
       <nav class="footer__menu footer__links-list-item_no-bullit">
         <ul class="footer__links-list">
@@ -174,16 +175,8 @@
         </ul>
       </nav>
       <div class="socials">
-        <img
-          class="footer__logo-image"
-          src="./images/yt.svg"
-          alt="YouTube"
-        />
-        <img
-          class="footer__logo-image"
-          src="./images/vk.svg"
-          alt="Вконтакте"
-        />
+        <img class="footer__logo-image" src="./images/yt.svg" alt="YouTube" />
+        <img class="footer__logo-image" src="./images/vk.svg" alt="Вконтакте" />
         <img
           class="footer__logo-image"
           src="./images/pinterest.svg"
