Внес правки Автотестов: исправил атрибуты href

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <nav class="header__menu header__links-list-item_no-bullit">
         <ul class="header__links-list">
           <li class="header__links-list-item header__link">
-            <a>главная</a>
+            <a href="#header">главная</a>
           </li>
-          <li class="header__links-list-item header__link_active" href="#0">
-            <a>посмотреть лоты</a>
+          <li class="header__links-list-item header__link_active">
+            <a href="#lots">посмотреть лоты</a>
           </li>
-          <li class="header__links-list-item header__link_active" href="#0">
-            <a>об аукционе</a>
+          <li class="header__links-list-item header__link_active">
+            <a href="#about">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -63,7 +63,7 @@
           </div>
         </div>
       </section>
-      <section class="lots">
+      <section class="lots" id="lots">
         <h1 class="lots__heading">лоты</h1>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
@@ -122,7 +122,7 @@
         </ul>
         <a class="lots__look-more-link" href="#">посмотреть больше</a>
       </section>
-      <section class="about">
+      <section class="about" id="about">
         <div class="about__column about__column_logo">
           <div class="about__logo">
             <img
@@ -159,18 +159,18 @@
       <address class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
-        наб. Принсенграхт 263-265,<br>Амстердам
+        наб. Принсенграхт 263-265,<br />Амстердам
       </address>
       <nav class="footer__menu footer__links-list-item_no-bullit">
         <ul class="footer__links-list">
           <li class="footer__links-list-item footer__link">
-            <a>главная</a>
+            <a href="#header">главная</a>
           </li>
-          <li class="footer__links-list-item footer__link_active" href="#0">
-            <a>посмотреть лоты</a>
+          <li class="footer__links-list-item footer__link_active">
+            <a href="#lots">посмотреть лоты</a>
           </li>
-          <li class="footer__links-list-item footer__link_active" href="#0">
-            <a>об аукционе</a>
+          <li class="footer__links-list-item footer__link_active">
+            <a href="#about">об аукционе</a>
           </li>
         </ul>
       </nav>
