--- a/index.html
+++ b/index.html
@@ -34,25 +34,21 @@
       <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
-        наб. Принсенграхт 263-265,<br />
-        Амстердам
+        наб. Принсенграхт 263-265, Амстердам
       </address>
     </header>
     <main class="content">
       <section class="cover">
         <div class="overlay">
           <h1 class="cover__title">
-            <span class="accent-span letter-spacing"
-              >Он
-              <span class="spacing-last-letter">о</span>
+            <span class="accent-span letter-spacing_left">
+              О<span class="letter-spacing-extended">н</span>о
             </span>
-            <span class="accent-span text-center letter-spacing"
-              >теб
-              <span class="spacing-last-letter">е</span>
+            <span class="accent-span letter-spacing_center">
+              те<span class="letter-spacing-extended">б</span>е
             </span>
-            <span class="accent-span text-right letter-spacing"
-              >н
-              <span class="spacing-last-letter">адо</span>
+            <span class="accent-span letter-spacing_right">
+              <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
             </span>
           </h1>
           <div class="cover__description">
