--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
               те<span class="letter-spacing-extended">б</span>е
             </span>
             <span class="accent-span letter-spacing_right">
-              <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+              <span class="letter-spacing-extended">н</span>ад<span
+                class="no-letter-spacing"
+                >о</span
+              >
             </span>
           </h1>
           <div class="cover__description">
