Внес Ревью правки: Поправил заголовки, поправил макет, изменил картинки ссылками в футоре

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </section>
       <section class="lots" id="lots">
-        <h1 class="lots__heading">лоты</h1>
+        <h2 class="lots__heading">лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a class="card-link" href="#">
@@ -131,7 +131,7 @@
             />
           </div>
           <div class="about__column about__column_text">
-            <h1 class="about__title">Об аукционе</h1>
+            <h2 class="about__title">Об аукционе</h2>
             <div class="about__text">
               <p>
                 Здесь вы не встретите очередное пафосное собрание невероятно
@@ -174,13 +174,23 @@
         </ul>
       </nav>
       <div class="socials">
-        <img class="footer__logo-image" src="./images/yt.svg" alt="YouTube" />
-        <img class="footer__logo-image" src="./images/vk.svg" alt="Вконтакте" />
-        <img
-          class="footer__logo-image"
-          src="./images/pinterest.svg"
-          alt="Pinterest"
-        />
+        <a class="footer__logo"
+          ><img class="footer__logo-image" 
+          src="./images/yt.svg" 
+          alt="YouTube"
+        /></a>
+        <a class="footer__logo"
+          ><img
+            class="footer__logo-image"
+            src="./images/vk.svg"
+            alt="Вконтакте"
+        /></a>
+        <a class="footer__logo"
+          ><img
+            class="footer__logo-image"
+            src="./images/pinterest.svg"
+            alt="Pinterest"
+        /></a>
       </div>
     </footer>
   </body>
