--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <li class="header__links-list-item header__link">
             <a href="#header">главная</a>
           </li>
-          <li class="header__links-list-item header__link_active_lots">
+          <li class="header__links-list-item header__links-list-item_active">
             <a href="#lots">посмотреть лоты</a>
           </li>
-          <li class="header__links-list-item header__link_active_about">
+          <li class="header__links-list-item header__links-list-item_active">
             <a href="#about">об аукционе</a>
           </li>
         </ul>
@@ -69,9 +69,9 @@
             <a class="card-link" href="#">
               <article class="card card_type_film">
                 <div class="overlay">
-                  <h2 class="card__title">
+                  <h3 class="card__title">
                     Фильм режиссёра, который бросил киношколу
-                  </h2>
+                  </h3>
                   <p class="card__text">
                     Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                     ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -105,9 +105,9 @@
             <a class="card-link" href="#">
               <article class="card card_type_picture">
                 <div class="overlay">
-                  <h4 class="card__title">
+                  <h3 class="card__title">
                     Картина, которую повторит даже 5-летний сын маминой подруги
-                  </h4>
+                  </h3>
                   <p class="card__text">
                     Ну действительно, там линия, тут кружочек, а здесь и вовсе
                     что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -130,7 +130,7 @@
               alt="Логотип"
             />
           </div>
-          <div class="about__column about__column_text">
+          <div class="about__column about__column-text">
             <h2 class="about__title">Об аукционе</h2>
             <div class="about__text">
               <p>
